--- a/dashboard/templates/settings/release_streams.html
+++ b/dashboard/templates/settings/release_streams.html
@@ -22,8 +22,8 @@
         </span>
         <span class="pull-right">
             {% if user.is_authenticated and user.is_staff %}
-                <a href="{% url 'admin:dashboard_releasestream_add' %}" role="button" class="btn btn-default">Add Product</a>
-                <a href="{% url 'admin:dashboard_releasestream_changelist' %}" role="button" class="btn btn-default">Manage Products</a>
+                <a href="{% url 'admin:dashboard_product_add' %}" role="button" class="btn btn-default">Add Product</a>
+                <a href="{% url 'admin:dashboard_product_changelist' %}" role="button" class="btn btn-default">Manage Products</a>
             {% endif %}
         </span>
     </div>
@@ -35,8 +35,8 @@
       <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
           <div class="caption">
-            <h3>{{ relstream.relstream_name }} <small>{{ relstream.relstream_built }}</small>
-                {% if relstream.relstream_status %}
+            <h3>{{ relstream.product_name }} <small>{{ relstream.product_build_system }}</small>
+                {% if relstream.product_status %}
                     <span class="glyphicon glyphicon-ok-circle" style="color:green"></span>
                 {% else %}
                     <span class="glyphicon glyphicon-ban-circle" style="color:orange"></span>
@@ -50,7 +50,7 @@
                 <span class="glyphicon glyphicon-lock" aria-hidden="true"></span>
             </p>
             <p>
-                <span style="color:grey">Source package format:</span> {{ relstream.srcpkg_format|upper }}
+                <span style="color:grey">Source package format:</span> {{ relstream.src_pkg_format|upper }}
                 <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>
             </p>
             <p>
@@ -59,8 +59,8 @@
             </p>
             <hr/>
             <div class="list-group">
-              <a href="{% url 'settings-stream-branches' relstream.relstream_slug %}" class="list-group-item">
-                <h4 class="list-group-item-heading">{{ relstream.relstream_name }}
+              <a href="{% url 'settings-stream-branches' relstream.product_slug %}" class="list-group-item">
+                <h4 class="list-group-item-heading">{{ relstream.product_name }}
                     <small class="text-primary">Releases</small></h4>
               </a>
             </div>
@@ -71,7 +71,7 @@
     </div>
 {% else %}
     <p>
-        Add release stream to list it here.
+        Add product to list it here.
     </p>
 {% endif %}
 {% endblock %}
