--- a/dashboard/templates/settings/graph_rules.html
+++ b/dashboard/templates/settings/graph_rules.html
@@ -60,8 +60,9 @@
                 <td><a href="{% url 'custom-graph' %}?rule={{ rule.rule_name }}" class="text-info">
                     {{ rule.rule_name }}</a></td>
                 <td>{{ rule.rule_packages|join:", " }}</td>
-                <td>{{ rule.rule_langs|join:", " }}</td>
-                <td>{{ rule.rule_relbranch }}</td>
+                <td>{{ rule.rule_languages|join:", " }}</td>
+                <td><a href="{% url 'trans-status-release' rule.rule_release_slug.release_slug %}">
+                    {{ rule.rule_release_slug.release_name }}</a></td>
                 <td>{{ rule.created_on }} <span class="glyphicon glyphicon-time" aria-hidden="true"></span></td>
                 <!--<td align="center">-->
                   <!--<a class="btn btn-default btn-small disabled"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>-->
