[UI] Add change_lang_status function in views
- This adds new function for ajax call which will disable/enable the language
- Needs data to be sent like {'language': <locale_id>, 'status': <'enable'/'disable'>}
- Make changes according to this url, in language_list.html template
- Changes the Status column of that particular language if the ajax call results in success
- Shows toast notification on success or failure

Signed-off-by: Bhavin Gandhi <bhavin7392@gmail.com>

--- a/transtats/static/css/transtats.css
+++ b/transtats/static/css/transtats.css
@@ -30,6 +30,15 @@
     color: #363636;
     font-size: 1.168em;
 }
+.spinner{
+    position: fixed;
+    top:0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: auto;
+    z-index: 1000;
+}
 
 /* TODO: May not be required */
 .scrollable-menu {
