[UI] new ui for translation platforms section
- Uses cards to display platforms
- PF empty state if no platforms present
- Adds forms to add new platforms and update/edit existing platform
- Adds new css class card-pf-view-edit-ts; to have edit button at top right corner of card
- New url structure
  - /translation-platforms
    - /new
    - /edit/<platform_slug>

Signed-off-by: Bhavin Gandhi <bhavin7392@gmail.com>

--- a/transtats/static/css/transtats.css
+++ b/transtats/static/css/transtats.css
@@ -54,6 +54,12 @@
     background-repeat: no-repeat;
 }
 
+.card-pf-view-edit-ts {
+    position: absolute;
+    top: 11px;
+    right: 15px;
+}
+
 /*
 body {
     padding-top: 50px;
