--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -236,9 +236,11 @@
     {% block pagebanner %}{% endblock %}
     {% block navigation %}{% endblock %}
     {% block pagecontent %}{% endblock %}
+    <div class="spinner spinner-lg spinner-wait-ts" style="display:none"></div>
   </div>
 
   <script>
+    var waitSpinner = null
     $(document).ready(function () {
       // Initialize the vertical navigation
       $().setupVerticalNavigation(true);
@@ -247,6 +249,7 @@
         e.preventDefault();
         $('#about-modal').modal('show');
       });
+      waitSpinner = $('.spinner-wait-ts')
     });
   </script>
 
