[UI] Modify product_release_list.html
- Show the release schedule in cards as tables
- Adds new CSS class vert-scroll-div-ts, card-pf-footer
- This makes the tables inside the cards scrollable if the length is more than certain pixels
- Modifies the _releases_summary.html according to it
- Add jquery.matchHeight.js to match the height of all cards on these pages

Signed-off-by: Bhavin Gandhi <bhavin192@redhat.com>
Signed-off-by: Bhavin Gandhi <bhavin7392@gmail.com>

--- a/transtats/static/css/transtats.css
+++ b/transtats/static/css/transtats.css
@@ -97,6 +97,15 @@
     }
 }
 
+.card-pf-footer {
+    overflow: auto;
+}
+
+.vert-scroll-div-ts {
+    max-height: 470px;
+    overflow-y: auto;
+}
+
 /*
 body {
     padding-top: 50px;
