[UI] Update PatternFly version to 3.58.0
- This also changes the paths used for js files
- Adds jquery.flot (0.8.3), jquery.flot.tooltip (0.9.0) as dependency
  for Transtats

Signed-off-by: Bhavin Gandhi <bhavin7392@gmail.com>

--- a/dashboard/templates/packages/package_list.html
+++ b/dashboard/templates/packages/package_list.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
 {% load custom_tags %}
 {% block pre-pf-script %}
-<script src="/static/node_modules/datatables.net/js/jquery.dataTables.js"></script> 
+<script src="/static/datatables.net/js/jquery.dataTables.js"></script>
 {% endblock %} 
 {% block extrascript %}
-<script src="/static/node_modules/bootstrap-select/js/bootstrap-select.js"></script>
-<script src="/static/dist/js/patternfly.dataTables.pfEmpty.min.js"></script>
-<script src="/static/dist/js/patternfly.dataTables.pfFilter.js"></script>
-<script src="/static/dist/js/patternfly.dataTables.pfPagination.js"></script>
-<script src="/static/dist/js/patternfly.dataTables.pfResize.min.js"></script>
-<script src="/static/node_modules/d3/d3.js"></script>
-<script src="/static/node_modules/c3/c3.js"></script>
+<script src="/static/bootstrap-select/js/bootstrap-select.js"></script>
+<script src="/static/patternfly/dist/js/patternfly.dataTables.pfEmpty.min.js"></script>
+<script src="/static/patternfly/dist/js/patternfly.dataTables.pfFilter.js"></script>
+<script src="/static/patternfly/dist/js/patternfly.dataTables.pfPagination.js"></script>
+<script src="/static/patternfly/dist/js/patternfly.dataTables.pfResize.min.js"></script>
+<script src="/static/d3/d3.js"></script>
+<script src="/static/c3/c3.js"></script>
 <script src="/static/js/csrf.js"></script>
 {% endblock %} 
 {% block pagecontent %}
