--- a/dashboard/templates/packages/package_view.html
+++ b/dashboard/templates/packages/package_view.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 {% load custom_tags %}
 {% block pre-pf-script %}
-<script src="/static/node_modules/datatables.net/js/jquery.dataTables.js"></script>
+<script src="/static/datatables.net/js/jquery.dataTables.js"></script>
 {% endblock %}
 {% block extrascript %}
-<script src="/static/js/jquery.flot.js"></script>
-<script src="/static/js/jquery.flot.tooltip.js"></script>
+<script src="/static/jquery.flot/jquery.flot.js"></script>
+<script src="/static/jquery.flot.tooltip/js/jquery.flot.tooltip.js"></script>
 <script src="/static/js/csrf.js"></script>
-<script src="/static/node_modules/bootstrap-select/js/bootstrap-select.js"></script>
+<script src="/static/bootstrap-select/js/bootstrap-select.js"></script>
 {% endblock %}
 
 {% block pagecontent %}
