--- a/dashboard/templates/releases/release_view.html
+++ b/dashboard/templates/releases/release_view.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% block extrascript %}
-<script src="/static/js/jquery.flot.js"></script>
-<script src="/static/js/excanvas.min.js"></script>
-<script src="/static/js/jquery.flot.pie.js"></script>
+<script src="/static/jquery.flot/jquery.flot.js"></script>
+<script src="/static/jquery.flot/excanvas.js"></script>
+<script src="/static/jquery.flot/jquery.flot.pie.js"></script>
 <script src="/static/js/csrf.js"></script>
-<script src="/static/node_modules/bootstrap-select/dist/js/bootstrap-select.js"></script>
+<script src="/static/bootstrap-select/dist/js/bootstrap-select.js"></script>
 <style type="text/css">
   .graph-area {
     width: 100%;
