--- a/dashboard/templates/graph_rules/graph_rule_list.html
+++ b/dashboard/templates/graph_rules/graph_rule_list.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 {% block pre-pf-script %}
-<script src="/static/node_modules/datatables.net/js/jquery.dataTables.js"></script>
+<script src="/static/datatables.net/js/jquery.dataTables.js"></script>
 {% endblock %}
 {% block extrascript %}
-<script src="/static/node_modules/bootstrap-select/js/bootstrap-select.js"></script>
-<script src="/static/dist/js/patternfly.dataTables.pfFilter.js"></script>
-<script src="/static/dist/js/patternfly.dataTables.pfPagination.js"></script>
-<script src="/static/dist/js/patternfly.dataTables.pfEmpty.js"></script>
+<script src="/static/bootstrap-select/js/bootstrap-select.js"></script>
+<script src="/static/patternfly/dist/js/patternfly.dataTables.pfFilter.js"></script>
+<script src="/static/patternfly/dist/js/patternfly.dataTables.pfPagination.js"></script>
+<script src="/static/patternfly/dist/js/patternfly.dataTables.pfEmpty.js"></script>
 {% endblock %}
 {% block pagecontent %}
 <!-- Graph rules table -->
