--- a/dashboard/templates/graph_rules/graph_rule_view.html
+++ b/dashboard/templates/graph_rules/graph_rule_view.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block extrascript %}
-<script src="/static/js/jquery.flot.js"></script>
-<script src="/static/js/jquery.flot.tooltip.js"></script>
-<script src="/static/js/jquery.flot.stack.js"></script>
-<script src="/static/node_modules/bootstrap-select/js/bootstrap-select.js"></script>
+<script src="/static/jquery.flot/jquery.flot.js"></script>
+<script src="/static/jquery.flot.tooltip/js/jquery.flot.tooltip.js"></script>
+<script src="/static/jquery.flot/jquery.flot.stack.js"></script>
+<script src="/static/bootstrap-select/js/bootstrap-select.js"></script>
 <script src="/static/js/csrf.js"></script>
 {% endblock %}
 {% block pagecontent %}
