--- a/dashboard/templates/packages/_package_details.html
+++ b/dashboard/templates/packages/_package_details.html
@@ -6,26 +6,26 @@
 <h5>
   <strong>Upstream Repository URL: </strong>
   <a href="{{ package.upstream_url }}" target="_blank">{{ package.upstream_url }}</a>
-  {% if package.upstream_lastupdated %} &emsp;
-  <span class="text-muted">Last Sync:</span> {{ package.upstream_lastupdated|timesince }}
+  {% if package.upstream_last_updated %} &emsp;
+  <span class="text-muted">Last Sync:</span> {{ package.upstream_last_updated|timesince }}
   <span class="text-muted">ago</span>
   {% endif %}
 </h5>
 <h5>
   <strong>Translation Platform Project URL: </strong>
-  <a href="{{ package.transplatform_url }}" target="_blank">{{ package.transplatform_url }}</a>
-  {% if package.transtats_lastupdated %} &emsp;
+  <a href="{{ package.platform_url }}" target="_blank">{{ package.platform_url }}</a>
+  {% if package.platform_last_updated %} &emsp;
   <span class="text-muted">Last Sync:</span>
-  {{ package.transtats_lastupdated|timesince }}
+  {{ package.platform_last_updated|timesince }}
   <span class="text-muted">ago</span>
   {% endif %}
 </h5>
 <h5>
   <strong>Being tracked for Release Streams: </strong>
-  <span class="text-info">{{ package.release_streams|join:", " }}</span>
-  {% if package.downstream_lastupdated %} &emsp;
+  <span class="text-info">{{ package.products|join:", " }}</span>
+  {% if package.downstream_last_updated %} &emsp;
   <span class="text-muted">Sync with Build System:</span>
-  {{ package.downstream_lastupdated|timesince }}
+  {{ package.downstream_last_updated|timesince }}
   <span class="text-muted">ago</span>
   {% endif %}
   {% if package.created_by and user.is_authenticated %} &emsp;
@@ -34,7 +34,7 @@
   {% endif %}
 </h5>
 
-{% if not package.transtats_lastupdated and not package.upstream_latest_stats %}
+{% if not package.platform_last_updated and not package.upstream_last_updated %}
 <div class="blank-slate-pf" id="blank-state-translation-stats">
   <div class="blank-slate-pf-icon">
     <span class="fa fa-refresh"></span>
