--- a/dashboard/templates/releases/_workload_combined.html
+++ b/dashboard/templates/releases/_workload_combined.html
@@ -13,7 +13,7 @@
     <tr>
       <td>{{ forloop.counter }}</td>
       <!-- TODO: link to the package page  -->
-      <td>{{ package.0 }}</td>
+      <td><a href="{% url 'package-view' package.0 %}">{{ package.0 }}</a></td>
       <td>{{ package.1.Total }}&nbsp;
         <span class="text-muted">messages</span>
       </td>
