--- a/dashboard/templates/releases/release_list.html
+++ b/dashboard/templates/releases/release_list.html
@@ -16,7 +16,7 @@
     <h3 class="panel-title">
       Products
       {% if user.is_staff %}
-      <a class="pull-right btn btn-default btn-xs" id="button-add-product" type="button" href="{% url 'admin:dashboard_releasestream_add' %}">
+      <a class="pull-right btn btn-default btn-xs" id="button-add-product" type="button" href="{% url 'admin:dashboard_product_add' %}">
         <span class="pficon pficon-add-circle-o"></span> Add product
       </a>
       {% endif %}
@@ -39,7 +39,7 @@
         <a href="#">on the documentation</a>.
       </p>
       <div class="blank-slate-pf-main-action">
-        <a class="btn btn-primary btn-lg" href="{% url 'admin:dashboard_releasestream_add' %}">
+        <a class="btn btn-primary btn-lg" href="{% url 'admin:dashboard_product_add' %}">
           <i class="pficon pficon-add-circle-o"></i> Add product</a>
       </div>
     </div>
@@ -49,7 +49,7 @@
     {% for relstream in relstreams %}
     <div class="list-group-item">
       <div class="list-view-pf-actions">
-        <a class="btn btn-default" href="{% url 'settings-stream-branches' relstream.relstream_slug %}">Show releases</a>
+        <a class="btn btn-default" href="{% url 'settings-stream-branches' relstream.product_slug %}">Show releases</a>
         {% if user.is_staff %}
         <div class="dropdown pull-right dropdown-kebab-pf">
           <button class="btn btn-link dropdown-toggle" type="button" id="dropdown-product-list" data-toggle="dropdown" aria-haspopup="true"
@@ -58,7 +58,7 @@
           </button>
           <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown-product-list">
             <li>
-              <a href="{% url 'admin:dashboard_releasestream_changelist' %}">Edit product</a>
+              <a href="{% url 'admin:dashboard_product_changelist' %}">Edit product</a>
             </li>
           </ul>
         </div>
@@ -66,7 +66,7 @@
       </div>
       <div class="list-view-pf-main-info">
         <div class="list-view-pf-left">
-          {% if relstream.relstream_status %}
+          {% if relstream.product_status %}
           <span class="pficon pficon-ok list-view-pf-icon-md list-view-pf-icon-success" data-toggle="tooltip" title="Enabled"></span>
           {% else %}
           <span class="fa fa-ban list-view-pf-icon-md list-view-pf-icon-info" data-toggle="tooltip" title="Disabled"></span>
@@ -75,7 +75,7 @@
         <div class="list-view-pf-body">
           <div class="list-view-pf-description">
             <div class="list-group-item-heading">
-              {{ relstream.relstream_name }}
+              {{ relstream.product_name }}
             </div>
             <div class="list-group-item-text">
               <a href="{{ relstream.web_url }}" target="_blank">{{ relstream.web_url }}</a>
@@ -85,7 +85,7 @@
           <div class="list-view-pf-additional-info">
             <div class="list-view-pf-additional-info-item" data-toggle="tooltip" title="Build system">
               <span class="fa fa-server"></span>
-              <strong>{{ relstream.relstream_built }}</strong>
+              <strong>{{ relstream.product_build_system }}</strong>
             </div>
             <div class="list-view-pf-additional-info-item" data-toggle="tooltip" title="Authentication type">
               <span class="pficon pficon-locked"></span>
@@ -93,7 +93,7 @@
             </div>
             <div class="list-view-pf-additional-info-item" data-toggle="tooltip" title="Source package format">
               <span class="fa fa-file-zip-o"></span>
-              <strong>{{ relstream.srcpkg_format|upper }}</strong>
+              <strong>{{ relstream.src_pkg_format|upper }}</strong>
             </div>
             <div class="list-view-pf-additional-info-item" data-toggle="tooltip" title="Message bus">
               <span class="fa fa-envelope"></span>
@@ -147,7 +147,7 @@
         </p>
         <div class="blank-slate-pf-main-action">
           {% for relstream in relstreams %}
-          <a class="btn btn-primary btn-lg" href="{% url 'settings-stream-branches-new' relstream.relstream_slug %}">
+          <a class="btn btn-primary btn-lg" href="{% url 'settings-stream-branches-new' relstream.product_slug %}">
             <i class="pficon pficon-add-circle-o"></i> Add a {{ relstream.relstream_name }} release</a>
           {% endfor %}
         </div>
