--- a/dashboard/templates/jobs/jobs_home.html
+++ b/dashboard/templates/jobs/jobs_home.html
@@ -3,14 +3,8 @@
 {% block extrascript %}
 <script src="/static/js/csrf.js"></script>
 <script type="text/javascript">
-    function getUrlVars(){for(var t,e=[],n=window.location.href.slice(window.location.href.indexOf("?")+1).split("&"),s=0;s<n.length;s++)t=n[s].split("="),e.push(t[0]),e[t[0]]=t[1];return e}function csrfSafeMethod(t){return/^(GET|HEAD|OPTIONS|TRACE)$/.test(t)}$(document).ready(function(){$("#tab-jobs").addClass("active"),$("#syncTransForm").submit(function(t){var e=$(this).find("button");return e.button("loading"),$.ajax({beforeSend:function(t,e){csrfSafeMethod(e.type)||this.crossDomain||(csrftoken?t.setRequestHeader("X-CSRFToken",csrftoken):t.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),$("#transplatformwaiting").html("<img src='/static/img/spin.gif'></img>")},type:"POST",url:"/ajax/schedule-job",data:{job:$("#syncTransIdentifier").val()},success:function(t){$("#transplatformwaiting").html(""),$("#syncTransMsg").html(t),e.button("reset")}}),!1}),$("#syncCalendarForm").submit(function(t){var e=$(this).find("button");return e.button("loading"),$.ajax({beforeSend:function(t,e){csrfSafeMethod(e.type)||this.crossDomain||(csrftoken?t.setRequestHeader("X-CSRFToken",csrftoken):t.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),$("#relschedulewaiting").html("<img src='/static/img/spin.gif'></img>")},type:"POST",url:"/ajax/schedule-job",data:{job:$("#syncCalendarIdentifier").val()},success:function(t){$("#relschedulewaiting").html(""),$("#syncCalendarMsg").html(t),e.button("reset")}}),!1}),$("#syncBuildTagsForm").submit(function(t){var e=$(this).find("button");return e.button("loading"),$.ajax({beforeSend:function(t,e){csrfSafeMethod(e.type)||this.crossDomain||(csrftoken?t.setRequestHeader("X-CSRFToken",csrftoken):t.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),$("#buildtagswaiting").html("<img src='/static/img/spin.gif'></img>")},type:"POST",url:"/ajax/schedule-job",data:{job:$("#syncBuildTagsIdentifier").val()},success:function(t){$("#buildtagswaiting").html(""),$("#syncBuildTagsMsg").html(t),e.button("reset")}}),!1})});
+    function getUrlVars(){for(var t,e=[],n=window.location.href.slice(window.location.href.indexOf("?")+1).split("&"),s=0;s<n.length;s++)t=n[s].split("="),e.push(t[0]),e[t[0]]=t[1];return e}function csrfSafeMethod(t){return/^(GET|HEAD|OPTIONS|TRACE)$/.test(t)}$(document).ready(function(){$("#tab-jobs").addClass("active"),$("#syncTransForm").submit(function(t){var e=$(this).find("button");return e.button("loading"),$.ajax({beforeSend:function(t,e){csrfSafeMethod(e.type)||this.crossDomain||(csrftoken?t.setRequestHeader("X-CSRFToken",csrftoken):t.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),$("#transplatformwaiting").html("<span class='spinner spinner-sm spinner-inline'></span>")},type:"POST",url:"/ajax/schedule-job",data:{job:$("#syncTransIdentifier").val()},success:function(t){$("#transplatformwaiting").html(""),$("#syncTransMsg").html(t),e.button("reset")}}),!1}),$("#syncCalendarForm").submit(function(t){var e=$(this).find("button");return e.button("loading"),$.ajax({beforeSend:function(t,e){csrfSafeMethod(e.type)||this.crossDomain||(csrftoken?t.setRequestHeader("X-CSRFToken",csrftoken):t.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),$("#relschedulewaiting").html("<span class='spinner spinner-sm spinner-inline'></span>")},type:"POST",url:"/ajax/schedule-job",data:{job:$("#syncCalendarIdentifier").val()},success:function(t){$("#relschedulewaiting").html(""),$("#syncCalendarMsg").html(t),e.button("reset")}}),!1}),$("#syncBuildTagsForm").submit(function(t){var e=$(this).find("button");return e.button("loading"),$.ajax({beforeSend:function(t,e){csrfSafeMethod(e.type)||this.crossDomain||(csrftoken?t.setRequestHeader("X-CSRFToken",csrftoken):t.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),$("#buildtagswaiting").html("<span class='spinner spinner-sm spinner-inline'></span>")},type:"POST",url:"/ajax/schedule-job",data:{job:$("#syncBuildTagsIdentifier").val()},success:function(t){$("#buildtagswaiting").html(""),$("#syncBuildTagsMsg").html(t),e.button("reset")}}),!1})});
 </script>
-{% endblock %}
-
-{% block navigation %}
-    <a href="{% url 'home' %}" class="btn btn-default"><i class="glyphicon glyphicon-dashboard"></i></a>
-    <a href="{% url 'jobs' %}" class="btn btn-default">Jobs</a>
-    <div class="btn btn-default disabled">Predefined Jobs</div>
 {% endblock %}
 
 {% block tabcontent %}
@@ -45,7 +39,7 @@
             {% endfor %}
         </select>
         <button type="submit" data-loading-text="Syncing..." class="btn btn-default">
-            <span class="glyphicon glyphicon-play-circle"></span> Trigger Now</button>
+            <span class="fa fa-play-circle-o"></span> Trigger Now</button>
         {% else %}
             <span>No package configured. Add <a href="{% url 'package-new' %}">one</a> now.</span>
         {% endif %}
@@ -65,7 +59,7 @@
     <form method="post" id ="syncBuildTagsForm" class="form-horizontal">{% csrf_token %}
         <input type="hidden" value="syncbuildtags" id="syncBuildTagsIdentifier"/>
         <button type="submit" data-loading-text="Syncing..." class="btn btn-default">
-            <span class="glyphicon glyphicon-play-circle"></span> Trigger Now</button>
+            <span class="fa fa-play-circle-o"></span> Trigger Now</button>
         <span id="syncBuildTagsMsg"></span>
     </form>
   </div>
@@ -81,7 +75,7 @@
     <form method="post" id ="syncTransForm" class="form-horizontal">{% csrf_token %}
         <input type="hidden" value="synctransplatform" id="syncTransIdentifier"/>
         <button type="submit" data-loading-text="Syncing..." class="btn btn-default">
-            <span class="glyphicon glyphicon-play-circle"></span> Trigger Now</button>
+            <span class="fa fa-play-circle-o"></span> Trigger Now</button>
         <span id="syncTransMsg"></span>
     </form>
   </div>
@@ -97,7 +91,7 @@
     <form method="post" id ="syncCalendarForm" class="form-horizontal">{% csrf_token %}
         <input type="hidden" value="syncrelschedule" id="syncCalendarIdentifier"/>
         <button type="submit" data-loading-text="Syncing..." class="btn btn-default">
-            <span class="glyphicon glyphicon-play-circle"></span> Trigger Now</button>
+            <span class="fa fa-play-circle-o"></span> Trigger Now</button>
         <span id="syncCalendarMsg"></span>
     </form>
   </div>
