--- a/dashboard/templates/jobs/log_detail.html
+++ b/dashboard/templates/jobs/log_detail.html
@@ -18,13 +18,6 @@
 </script>
 {% endblock %}
 
-{% block navigation %}
-    <a href="{% url 'home' %}" class="btn btn-default"><i class="glyphicon glyphicon-dashboard"></i></a>
-    <a href="{% url 'jobs' %}" class="btn btn-default">Jobs</a>
-    <a href="{% url 'jobs-logs' %}" class="btn btn-default">Logs</a>
-    <div class="btn btn-default disabled">Detail</div>
-{% endblock %}
-
 {% block tabcontent %}
 <h4>Job ID: {{ log.job_uuid }}&nbsp;&nbsp;<small>{{ log.job_start_time|date }}</small></h4>
 <p>
@@ -37,15 +30,15 @@
     {% endif %}
     <span class="pull-right">
         {% if log.job_result %}
-            <span class="text-success"><span class="glyphicon glyphicon-ok-circle"></span> Succeed</span>
+            <span class="text-success"><span class="pficon pficon-ok"></span> Succeed</span>
         {% else %}
-            <span class="text-danger"><span class="glyphicon glyphicon-remove-circle"></span> Failed</span>
+            <span class="text-danger"><span class="pficon pficon-error-circle-o"></span> Failed</span>
         {% endif %}
     </span>
 </p>
 <hr/>
 <div class="panel-body">
-    <p><span class="glyphicon glyphicon-time" aria-hidden="true"></span><span class="text-info">
+    <p><span class="fa fa-clock-o" aria-hidden="true"></span><span class="text-info">
         {% if log.job_start_time %}Started at <strong>{{ log.job_start_time|time:"H:i:s" }}</strong>{% endif %}
         {% if log.job_end_time %} and completed at <strong>{{ log.job_end_time|time:"H:i:s" }}</strong>
         &nbsp;&nbsp;<em>({{ log.duration|floatformat:"0" }} seconds)</em>{% endif %}</span>
@@ -56,7 +49,7 @@
                     <button class="btn btn-default btn-copy js-tooltip js-copy" type="button" data-toggle="tooltip"
                             data-placement="bottom" data-copy="{{ request.build_absolute_uri }}{{ object.get_absolute_url }}"
                             title="Copy to clipboard">Copy Job URL
-                        <span class="glyphicon glyphicon-share"></span></button>
+                        <span class="fa fa-share-alt"></span></button>
                   </span>
                 </span>
             </span>
@@ -101,7 +94,7 @@
             {% endif %}<hr/>
             <button type="button" class="btn btn-default" data-toggle="collapse" data-target="#diff">Show Full Diff</button>
             <span class="text-muted pull-right">
-            <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+            <span class="pficon pficon-info" aria-hidden="true"></span>
                 POT at Translation Platform <strong>vs</strong> POT created from Source</span>
             <div id="diff" class="collapse">
                 <br/><div id="diffDiv"></div>
